test/types/tuple/marybeth/tuplecast.good
tuplecast.chpl:10: error: illegal cast from real(64) to 10*real(64)
